--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -5,9 +5,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: pnpm/action-setup@646cdf48217256a3d0b80361c5a50727664284f2
+        with:
+          version: 6.10.0
       - uses: actions/setup-node@v2
-      - uses: actions/javascript-action@v1.0.1
         with:
           node-version: '14'
-      - run: npm install -g bats
-      - run: bats -v
+          cache: 'pnpm'
+      - run: pnpm install
+      - run: pnpm test
